--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "2.8.8",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.0",
