--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
-    "noEmit": true
+    "noEmit": false
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*"]
 }
