setting up webpack dev server

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest",
     "test:w": "jest --watch",
     "lint": "eslint . --ext .ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build": "webpack",
+    "start": "webpack serve --open"
   },
   "repository": {
     "type": "git",
