--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "randomly",
   "version": "1.0.0",
   "description": "manage items and show them randomly",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "test": "jest",
     "test:w": "jest --watch",
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/felixrigau/randomly#readme",
   "devDependencies": {
     "@types/jest": "^29.5.5",
+    "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
@@ -36,5 +37,9 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
