--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^29.5.5",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.51.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
